--- a/Ink Canvas/Windows/SettingsViews/SettingsViews/ShortcutsPanel.xaml
+++ b/Ink Canvas/Windows/SettingsViews/SettingsViews/ShortcutsPanel.xaml
@@ -8,6 +8,7 @@
              d:DesignHeight="950" d:DesignWidth="640">
     <ScrollViewer ScrollChanged="ScrollViewerEx_ScrollChanged" IsManipulationEnabled="True" Name="ScrollViewerEx" IsDeferredScrollingEnabled="True" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Disabled" IsTabStop="False" TabIndex="-1" Margin="0,0,2,2">
         <StackPanel Margin="60,12,60,24">
+            <!-- 设置项已清空，仅保留页面框架 -->
         </StackPanel>
     </ScrollViewer>
 </UserControl>
